added configurations for "-Xdisable-assertions"