@@ -2,7 +2,8 @@ name := "Abstract Interpretation Framework"
 
 version := "0.0.1-SNAPSHOT"
 
-scalacOptions in (Compile, doc) := Seq("-deprecation", "-feature", "-unchecked")
+//scalacOptions in Compile := Seq("-deprecation", "-feature", "-unchecked", "-Xlint", "-Xdisable-assertions")
+//scalacOptions in Compile += "-Xdisable-assertions"
 
 scalacOptions in (Compile, doc) ++= Opts.doc.title("OPAL - Abstract Interpretation Framework")
 
@@ -26,10 +27,3 @@ fork in Test := false
 
 logBuffered in IntegrationTest := false
 
-//javaOptions in IntegrationTest := Seq("-Xmx3G", "-ea", "-Xrs", "-esa", "-Xshare:off", "-XstartOnFirstThread", "-XX:NewRatio=1", "-XX:SurvivorRatio=8", "-XX:+UseParallelGC", "-XX:+AggressiveOpts")
-
-//outputStrategy in IntegrationTest := Some(StdoutOutput)
-
-//connectInput in IntegrationTest := false
-
-//fork in IntegrationTest := true
